--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/elements": "^2.6.4",
+    "@react-navigation/native": "^7.1.17",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -32,15 +33,15 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "~0.21.1",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "eslint": "^9.25.0",
+    "@types/react": "~19.1.13",
+    "eslint": "^9.35.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
